[package]
name = "src_r"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proconio = { version = "=0.3.6", features = ["derive"] }
itertools = "0.10.5"
petgraph = "=0.5.0"
indexmap = "=1.3.2"
rand = "0.8.5"
lazy_static = "1.4.0"
num = "0.4.1"
num-bigint = "0.4.4"